# jdm

./: CMakeLists.txt
include/: jdm.h
source/: jdm.c
source/tests/: simple_test.c
